--- a/src/style.css
+++ b/src/style.css
@@ -140,6 +140,10 @@ button:focus {
   opacity: 0.9 !important;
 }
 
+.brand {
+  margin: 0;
+}
+
 @media (max-width: 767px) {
   .navbar {
     padding: 1rem 2rem !important;
@@ -150,6 +154,7 @@ button:focus {
     display: none !important;
   }
 }
+
 .navbar-brand {
   color: rgb(250, 250, 250) !important;
 }
